--- a/superhero_project/superheroes/templates/superheroes/index.html
+++ b/superhero_project/superheroes/templates/superheroes/index.html
@@ -10,7 +10,9 @@
     <h1>List of Heroes</h1>
     <ul>
         {% for hero in all_heroes %}
-        <li> <h2>{{hero.name}} - <a href="{% url 'superheroes:detail' hero.id %}">Click for Details</a></h2> </li>
+        <li> <h2>{{hero.name}} - <a href="{% url 'superheroes:detail' hero.id %}">Click for Details</a></h2>
+            <a href="{% url 'superheroes:detail' hero.id %}">Edit</a>&ensp;
+            <a href="{% url 'superheroes:delete' hero.id %}">Delete</a></li>
         {% endfor %}
     </ul>
     <a href="{% url 'superheroes:create' %}">Add New Hero</a>
