Added edit view linked to index

--- a/superhero_project/superheroes/templates/superheroes/index.html
+++ b/superhero_project/superheroes/templates/superheroes/index.html
@@ -11,7 +11,7 @@
     <ul>
         {% for hero in all_heroes %}
         <li> <h2>{{hero.name}} - <a href="{% url 'superheroes:detail' hero.id %}">Click for Details</a></h2>
-            <a href="{% url 'superheroes:detail' hero.id %}">Edit</a>&ensp;
+            <a href="{% url 'superheroes:edit' hero.id %}">Edit</a>&ensp;
             <a href="{% url 'superheroes:delete' hero.id %}">Delete</a></li>
         {% endfor %}
     </ul>
