--- a/superhero_project/superheroes/templates/superheroes/create.html
+++ b/superhero_project/superheroes/templates/superheroes/create.html
@@ -7,6 +7,7 @@
     <title>Create New Hero</title>
 </head>
 <body>
+    <h1>Create Hero</h1>
     <form action="{% url 'superheroes:create' %}" method="post">
         {% csrf_token %}
         Name: <input type="text" name="name" id="name"><br />
