--- a/superhero_project/superheroes/templates/superheroes/index.html
+++ b/superhero_project/superheroes/templates/superheroes/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>List of Heroes</h1>
+    {% load static %}
+    <img src="{% static 'superheroes/Deadpool.jpg' %}" alt="img Not Found" style="width:500px;height:600px;">
     <ul>
         {% for hero in all_heroes %}
         <li> <h2>{{hero.name}} - <a href="{% url 'superheroes:detail' hero.id %}">Click for Details</a></h2>
